3.2.4
-----
1. Fix missing icon for 'More' entry of now-playing menu.
2. Ignore some clicks on now-playing page if a menu is open.
3. Remove 'Years' option from genre listing - e.g.
   'My Music / Genres / <genre> / Years'. Because 'years' command does not
   support 'genre_id' filter.
4. Change dimensions on which now-playing landscape layout changes (again).

3.2.3
-----
 1. Alter dimensions upon which now playing layout changes.
 2. If 'replaceAll()' fails try 'replace()' with a regular expression.
 3. Add a 'replaceAll()' polyfill.
 4. Only show 'No Player' in 'Manage players' dialog if there are no players on
    this server and none seen on other servers.
 5. Add 'npRatio' URL query parameter to control width/height ratio before
    now-playing toggles between landscape and portrait.
 6. Replace all fill and stroke colours in SVG files.
 7. Fix recolouring some plugin icons.
 8. If list uses same image for all entries then do not show (does not apply to
    all lists).
 9. Strip HTML tags before showing toast messages.
10. Add 'Symphonies' to default composer and conductor genres.
11. Ensure 'Classic' skin changes are applied to pages when loaded from
    plugins link in 'Information' dialog.

3.2.2
-----
1. When checking for numeric shortcuts (e.g. 'Alt+1') look for 'DigitX' on
   event's 'code' property. This fixes usage on French keyboard.
2. Fix HTML showing for track listings in song view when using mobile layout
   on desktop.
3. Check for errors with replaceAll.
4. Change dimensions on which now-playing landscape layout changes.

3.2.1
-----
1. When checking whether to allow add/play all buttons check first item's
   favorites_url
2. Fix 'Application' settings menu item showing when it should not.
3. Replace all '|' not just first.

3.2.0
-----
 1. Add playlist and queue sorting.
 2. Add 'Add all' and 'Play all' actions to toolbar for 'All Songs' from Years,
    Genres, etc.
 3. Don't remove year filter when browse Years / year / Genres, etc.