@@ -6,6 +6,7 @@
    'My Music / Genres / <genre> / Years'. Because 'years' command does not
    support 'genre_id' filter.
 4. Change dimensions on which now-playing landscape layout changes (again).
+5. Fix button order in alarm dialog if usin Windows OK/Cancel layout.
 
 3.2.3
 -----
